--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
         &nbsp;
       </div>
       <div class="col-sm">
+        <p>This is a small test</p>
         <ng-container *ngIf="showLogin">
           <app-login (loginEvent)="authEvent($event);"></app-login>
         </ng-container>
